# asimov-mbox-module

./: CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
etc/: install.cast  install.sh
src/: error.rs  iterator.rs  lib.rs  message.rs  reader.rs
src/cataloger/: main.rs
src/fetcher/: main.rs
