# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-mbox-module"
version = "0.1.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for Mbox email import."
#documentation = "https://docs.rs/asimov-mbox-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-mbox-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]          # TODO
publish = true

[features]
default = ["all", "cli", "std"]
all = ["pretty", "tracing"]
cli = ["asimov-module/cli", "dogma/clap", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "dogma/std"]
unstable = []

# Optional features:
pretty = ["know/pretty", "dep:colored_json"]
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.17", default-features = false }
dogma = { version = "0.1.11", default-features = false, features = ["all"] }
know = { version = "0.2.6", features = ["mail-parser", "serde"] }
mail-parser = "0.11"
mbox-reader = "0.2"
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "std",
], optional = true }
colored_json = { version = "5", default-features = false, optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-mbox-cataloger"
path = "src/cataloger/main.rs"
required-features = ["cli"]

[[bin]]
name = "asimov-mbox-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]
